--- a/source/index.html
+++ b/source/index.html
@@ -1,13 +1,159 @@
 <!DOCTYPE html>
 <html class="page" lang="ru">
-  <head>
-    <meta charset="UTF-8">
-    <title>Название проекта</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="stylesheet" href="styles/styles.css">
-    <script src="scripts/index.js" defer></script>
-  </head>
-  <body class="page__body">
-    <header class="header">Шапка</header>
-  </body>
+
+<head>
+  <meta charset="UTF-8">
+  <title>Cat energy</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="stylesheet" href="styles/styles.css">
+  <script src="scripts/index.js" defer></script>
+</head>
+
+<body class="page__body">
+  <header class="main-header">
+    <a class="logo" href="#">
+      <img class="logo__logo-image" src="/images/logo-mobile.svg" alt="Логотип Котик" width="33" height="38">
+      <img class="logo__logo-image" src="/images/logo-text.svg" alt="Логотип Заголовок" width="101" height="18">
+    </a>
+    <nav class="main-nav">
+      <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+      <div class="main-nav__wrapper">
+        <ul class="main-nav__list site-list">
+          <li class="site-list__item site-list__item--active">
+            <a href="#">
+              Главная
+            </a>
+          </li>
+          <li class="site-list__item">
+            <a href="#">
+              Каталог продукции
+            </a>
+          </li>
+          <li class="site-list__item">
+            <a href="#">
+              Подбор программы
+            </a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <section class="promo">
+      <header class="promo__header">
+        <h1 class="promo__main-header">Функциональное питание для котиков</h1>
+        <p class="promo__slogan">Занялся собой? Займись котом!</p>
+      </header>
+      <img class="promo__promo-image" src="/images/promo-mobile.svg" alt="Профо фото продукции" width="280" height="270">
+      <a class="button" href="#">
+        <span class="button__button-text">Подобрать программу</span>
+      </a>
+    </section>
+  </header>
+  <main class="main-container">
+    <section class="programs">
+      <div class="programs__wrapper">
+        <header class="programs__header">
+          <h2 class="visually-hidden">
+            Программы контроля веса
+          </h2>
+        </header>
+        <ul class="programs__list">
+          <li class="programs__item">
+            <h3 class="programs__title">Похудение</h3>
+            <p class="programs__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+            <img class="programs__programs-image" src="/images/cat_back.svg" alt="Программа снижение веса SLIM" width="" height="">
+            <a class="programs__link button" href="#">
+              <span class="programs__link-text button__button-text">Каталог SLIM</span>
+              <img class="programs__link-icon" src="/images/arrow-right.svg" alt="Иконка стрелки направо" width="32" height="10">
+            </a>
+          </li>
+          <li class="programs__item">
+            <h3 class="programs__title">Набор массы</h3>
+            <p class="programs__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
+            <img class="programs__programs-image" src="/images/cat_back-pro.svg" alt="Программа набора веса PRO" width="" height="">
+            <a class="programs__link button" href="#">
+              <span class="programs__link-text button__button-text">Каталог SLIM</span>
+              <img class="programs__link-icon" src="/images/arrow-right.svg" alt="Иконка стрелки направо" width="32" height="10">
+            </a>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <section class="functions">
+      <header class="functions__header">
+        <h2 class="main-subheader">Как это работает</h2>
+      </header>
+      <ul class="functions__list">
+        <li class="functions__item">
+          <img class="functions__item-image" alt="ECO">
+          <span class="functions__description">Функциональное питание содержит только полезные питательные вещества.</span>
+        </li>
+        <li class="functions__item">
+          <img class="functions__item-image" alt="Cook">
+          <span class="functions__description">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</span>
+        </li>
+        <li class="functions__item">
+          <img class="functions__item-image" alt="Eat">
+          <span class="functions__description">Замените один-два приема обычной еды на наше функциональное питание.</span>
+        </li>
+        <li class="functions__item">
+          <img class="functions__item-image" alt="Time">
+          <span class="functions__description">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</span>
+        </li>
+      </ul>
+    </section>
+    <section class="example">
+      <header class="example__header">
+        <h2 class="main-subheader">Живой пример</h2>
+        <p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день. </p>
+      </header>
+      <ul class="example__list">
+        <li class="example__item">
+          <span class="example__item-text">5 кг</span>
+          <span class="example__item-text-second">снижение веса</span>
+        </li>
+        <li class="example__item">
+          <span class="example__item-text">60 дней</span>
+          <span class="example__item-text-second">затрачено время</span>
+        </li>
+      </ul>
+      <span class="example__text">
+        Затраты на питание: 15 000 РУБ.
+      </span>
+      <img class="example__image">
+    </section>
+  </main>
+  <footer class="main-footer">
+    <section class="contacts">
+      <h3 class="contacts__header">приглашаем к сотрудничеству дилеров!</h3>
+      <p class="contacts__description"></p>
+      <img class="location">
+    </section>
+    <section class="social">
+      <header class="social__header">
+        <h2 class="visually-hidden">
+          Мы в сети
+        </h2>
+      </header>
+      <a class="main-footer__logo" href="#">
+        <img class="main-footer__logo-image" src="/images/logo-text.svg" alt="Логотип Заголовок" width="101" height="18">
+      </a>
+      <ul class="main-footer__list">
+        <li class="main-footer__item">
+          <img class="main-footer__item-icon" src="/images/telegram.svg">
+        </li>
+        <li class="main-footer__item">
+          <img class="main-footer__item-icon" src="/images/youtube.svg">
+        </li>
+        <li class="main-footer__item">
+          <img class="main-footer__item-icon" src="/images/telegram.svg">
+        </li>
+      </ul>
+      <div class="academy">
+        <p class="academy__text">HTML Academy</p>
+        <img class="academy__logo">
+      </div>
+    </section>
+  </footer>
+</body>
+
 </html>
