--- a/source/index.html
+++ b/source/index.html
@@ -40,7 +40,7 @@
     <section class="promo">
       <h1 class="promo__main-header">Функциональное питание для котиков</h1>
       <p class="promo__slogan">Занялся собой? Займись котом!</p>
-      <img class="promo__promo-image" src="images/promo-mobile.svg" alt="Проvо фото продукции" width="280" height="270">
+      <img class="promo__promo-image" src="images/promo-mobile.svg" alt="Промо фото продукции" width="280" height="270">
       <a class="button" href="#">
         <span class="button__button-text">Подобрать программу</span>
       </a>
@@ -153,10 +153,10 @@
           <img class="main-footer__item-icon" src="images/telegram.svg" alt='' width="28" height="22">
         </li>
       </ul>
-      <div class="academy">
+      <a class="academy" href="https://htmlacademy.ru/intensive/adaptive">
         <p class="academy__text">HTML Academy</p>
         <img class="academy__logo" src="images/" alt="Logo HTMLAcademy" width="27" height="34">
-      </div>
+      </a>
     </section>
   </footer>
 </body>
