немного переделала разметку слайдера в index.html

--- a/source/index.html
+++ b/source/index.html
@@ -118,14 +118,9 @@
         Затраты на питание: 15 000 РУБ.
       </span>
       <div class="cat-slider">
-        <div class="cat-slider__before">
-          <img class="cat-slider__image" src="images/" alt="Фото котика до функционального питания" width="280" height="256">
-          <div class="cat-slider__button"></div>
-        </div>
-        <div class="cat-slider__after">
-          <img class="cat-slider__image" src="images/" alt="Фото котика на функциональном питании" width="280" height="256">
-          <div class="cat-slider__button"></div>
-        </div>
+        <img class="cat-slider__image" src="images/" alt="Фото котика до функционального питания" width="280" height="256">
+        <img class="cat-slider__image" src="images/" alt="Фото котика на функциональном питании" width="280" height="256">
+        <div class="cat-slider__control"></div>
       </div>
     </section>
   </main>
