--- a/source/catalog.html
+++ b/source/catalog.html
@@ -321,7 +321,6 @@
         </li>
       </ul>
       <div class="sub-products__actions">
-        <img class="sub-products__actions-img" src="images/" alt="present" width="78" height="80">
         <p class="sub-products__actions-description">Закажите все
           и получите чехол для
           кота в подарок!</p>
@@ -355,17 +354,23 @@
       </a>
       <ul class="main-footer__list">
         <li class="main-footer__item">
-          <img class="main-footer__item-icon" src="images/telegram.svg" alt='' width="28" height="22">
+          <a class="main-footer__link main-footer__link--vk" href="https://vk.com/htmlacademy">
+            <span class="visually-hidden">Мы в контакте</span>
+          </a>
         </li>
         <li class="main-footer__item">
-          <img class="main-footer__item-icon" src="images/youtube.svg" alt='' width="28" height="22">
+          <a class="main-footer__link main-footer__link--youtube" href="https://youtube.com/htmlacademy">
+            <span class="visually-hidden">Мы в youtube</span>
+          </a>
         </li>
         <li class="main-footer__item">
-          <img class="main-footer__item-icon" src="images/telegram.svg" alt='' width="28" height="22">
+          <a class="main-footer__link main-footer__link--telegram" href="https://vk.com/htmlacademy">
+            <span class="visually-hidden">Мы в telegram</span>
+          </a>
         </li>
       </ul>
       <a class="academy" href="https://htmlacademy.ru/intensive/adaptive">
-        <p class="academy__text">HTML Academy</p>
+        <span class="academy__text">HTML Academy</span>
         <img class="academy__logo" src="images/" alt="Logo HTMLAcademy" width="27" height="34">
       </a>
     </section>
