--- a/source/index.html
+++ b/source/index.html
@@ -16,7 +16,9 @@
         <img class="logo__logo-image" src="images/logo-mobile.svg" alt="Логотип Котик" width="33" height="38">
         <img class="logo__logo-image" src="images/logo-text.svg" alt="Логотип Заголовок" width="101" height="18">
       </a>
-      <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+      <button class="main-nav__toggle" type="button">
+        <span class="visually-hidden">Открыть меню</span>
+      </button>
       <div class="main-nav__wrapper">
         <ul class="main-nav__list site-list">
           <li class="site-list__item site-list__item--active">
@@ -58,19 +60,15 @@
           <li class="programs__item">
             <h3 class="programs__title">Похудение</h3>
             <p class="programs__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-            <img class="programs__programs-image" src="images/cat_back.svg" alt="Программа снижение веса SLIM" width="50" height="53">
             <a class="programs__link button" href="catalog.html">
               <span class="programs__link-text button__button-text">Каталог SLIM</span>
-              <img class="programs__link-icon" src="images/arrow-right.svg" alt="Иконка стрелки направо" width="32" height="10">
             </a>
           </li>
           <li class="programs__item">
             <h3 class="programs__title">Набор массы</h3>
             <p class="programs__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
-            <img class="programs__programs-image" src="images/cat_back-pro.svg" alt="Программа набора веса PRO" width="67" height="50">
             <a class="programs__link button" href="catalog.html">
               <span class="programs__link-text button__button-text">Каталог SLIM</span>
-              <img class="programs__link-icon" src="images/arrow-right.svg" alt="Иконка стрелки направо" width="32" height="10">
             </a>
           </li>
         </ul>
@@ -82,19 +80,18 @@
       </header>
       <ul class="functions__list">
         <li class="functions__item">
-          <img class="functions__item-image" src="images/group-1.svg" alt="ECO" width="60" height="60">
+          <div class="functions__item-image"></div>
           <span class="functions__description">Функциональное питание содержит только полезные питательные вещества.</span>
         </li>
         <li class="functions__item">
-          <img class="functions__item-image" src="images/group-2.svg" alt="Cook" width="60" height="60">
           <span class="functions__description">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</span>
         </li>
         <li class="functions__item">
-          <img class="functions__item-image" src="images/group-3.svg" alt="Eat" width="60" height="60">
+          <div class="functions__item-image"></div>
           <span class="functions__description">Замените один-два приема обычной еды на наше функциональное питание.</span>
         </li>
         <li class="functions__item">
-          <img class="functions__item-image" src="images/group-4.svg" alt="Time" width="60" height="60">
+          <div class="functions__item-image"></div>
           <span class="functions__description">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</span>
         </li>
       </ul>
@@ -139,17 +136,23 @@
       </a>
       <ul class="main-footer__list">
         <li class="main-footer__item">
-          <img class="main-footer__item-icon" src="images/telegram.svg" alt='' width="28" height="22">
+          <a class="main-footer__link main-footer__link--vk" href="https://vk.com/htmlacademy">
+            <span class="visually-hidden">Мы в контакте</span>
+          </a>
         </li>
         <li class="main-footer__item">
-          <img class="main-footer__item-icon" src="images/youtube.svg" alt='' width="28" height="22">
+          <a class="main-footer__link main-footer__link--youtube" href="https://youtube.com/htmlacademy">
+            <span class="visually-hidden">Мы в youtube</span>
+          </a>
         </li>
         <li class="main-footer__item">
-          <img class="main-footer__item-icon" src="images/telegram.svg" alt='' width="28" height="22">
+          <a class="main-footer__link main-footer__link--telegram" href="https://vk.com/htmlacademy">
+            <span class="visually-hidden">Мы в telegram</span>
+          </a>
         </li>
       </ul>
       <a class="academy" href="https://htmlacademy.ru/intensive/adaptive">
-        <p class="academy__text">HTML Academy</p>
+        <span class="academy__text">HTML Academy</span>
         <img class="academy__logo" src="images/" alt="Logo HTMLAcademy" width="27" height="34">
       </a>
     </section>
