1.Вернула height в source; 2.Заменила логотипы на svg; 3.Поправила фото котиков; 4.Добавила карту; 5.Поправила регистр названия в картинках и поменяла картинки

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -3,8 +3,12 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>CatEnergy - функциональное питание для котов</title>
+  <title>Каталог продукции CatEnergy - функциональное питание для котов</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="favicons/icon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="favicons/180.png">
+  <link rel="manifest" href="manifest.webmanifest">
   <link rel="stylesheet" href="styles/styles.css">
   <script src="scripts/index.js" defer></script>
 </head>
@@ -14,16 +18,14 @@
     <nav class="main-nav">
       <a class="logo" href="index.html">
         <picture>
-          <source width="70" type="image/png" media="(min-width: 1440px)" srcset="images/logo-text-desktop@1x.png 1x, images/logo-text-desktop@2x.png 2x">
-          <source width="60" type="image/png" media="(min-width: 768px)" srcset="images/logo-pic-tablet@1x.png 1x, images/logo-pic-tablet@2x.png 2x">
-          <img class="logo__logo-image" src="images/logo-pic-mobile@1x.png" srcset="images/logo-pic-mobile@2x.png 2x" alt="Логотип Котик" width="33" height="38">
+          <source width="70" height="59" type="image/svg+xml" media="(min-width: 1440px)" srcset="images/logo-pic-desktop.svg">
+          <source width="60" height="50" type="image/svg+xml" media="(min-width: 768px)" srcset="images/logo-pic-tablet.svg">
+          <img class="logo__logo-image" src="images/logo-pic-mobile.svg" alt="Логотип Котик" width="33" height="38">
         </picture>
         <picture>
-          <source width="118" type="image/png" media="(min-width: 1440px)" srcset="images/logo-pic-desktop@1x.png 1x, images/logo-pic-desktop@2x.png 2x">
-          <source width="101" type="image/png" media="(min-width: 768px)" srcset="images/logo-text-tablet@1x.png 1x, images/logo-text-tablet@2x.png 2x">
-          <img class="logo__logo-image" src="images/logo-text-mobile@1x.png" srcset="images/logo-text-mobile@2x.png 2x" alt="Логотип Заголовок" width="101" height="18">
+          <source width="101" height="18" type="image/svg+xml" media="(min-width: 768px)" srcset="images/logo-text-tablet.svg">
+          <img class="logo__logo-image" src="images/logo-text-mobile.svg" alt="Логотип Заголовок" width="101" height="18">
         </picture>
-
       </a>
       <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
       <div class="main-nav__wrapper">
@@ -61,9 +63,9 @@
           </a>
           <a class="card__item-link link" href="#">
             <picture>
-              <source width="169" type="image/png" media="(min-width: 1440px)" srcset="images/Pro500-desktop@1x.png 1x, images/Pro500-desktop@2x.png 2x">
-              <source width="200" type="image/png" media="(min-width: 768px)" srcset="images/Pro500-tablet@1x.png 1x, images/Pro500-tablet@2x.png 2x">
-              <img class="card__image" src="images/Pro500-mobile@1x.png" srcset="images/Pro500-mobile@2x.png 2x" alt="Cat Energy Pro" width="140" height="107">
+              <source width="169" height="210" type="image/png" media="(min-width: 1440px)" srcset="images/pro500-desktop@1x.png 1x, images/pro500-desktop@2x.png 2x">
+              <source width="200" height="210" type="image/png" media="(min-width: 768px)" srcset="images/pro500-tablet@1x.png 1x, images/pro500-tablet@2x.png 2x">
+              <img class="card__image" src="images/pro500-mobile@1x.png" srcset="images/pro500-mobile@2x.png 2x" alt="Cat Energy Pro" width="140" height="107">
             </picture>
           </a>
           <table class="card__table">
@@ -96,9 +98,9 @@
           </a>
           <a class="card__item-link link" href="#">
             <picture>
-              <source width="169" type="image/png" media="(min-width: 1440px)" srcset="images/Pro1000-desktop@1x.png 1x, images/Pro1000-desktop@2x.png 2x">
-              <source width="200" type="image/png" media="(min-width: 768px)" srcset="images/Pro1000-tablet@1x.png 1x, images/Pro1000-tablet@2x.png 2x">
-              <img class="card__image" src="images/Pro1000-mobile@1x.png" srcset="images/Pro1000-mobile@2x.png 2x" alt="Cat Energy Pro" width="140" height="107">
+              <source width="169" height="210" type="image/png" media="(min-width: 1440px)" srcset="images/pro1000-desktop@1x.png 1x, images/pro1000-desktop@2x.png 2x">
+              <source width="200" height="210" type="image/png" media="(min-width: 768px)" srcset="images/pro1000-tablet@1x.png 1x, images/pro1000-tablet@2x.png 2x">
+              <img class="card__image" src="images/pro1000-mobile@1x.png" srcset="images/pro1000-mobile@2x.png 2x" alt="Cat Energy Pro" width="140" height="107">
             </picture>
           </a>
           <table class="card__table">
@@ -131,9 +133,9 @@
           </a>
           <a class="card__item-link link" href="#">
             <picture>
-              <source width="169" type="image/png" media="(min-width: 1440px)" srcset="images/Pro500-2-desktop@1x.png 1x, images/Pro500-2-desktop@2x.png 2x">
-              <source width="200" type="image/png" media="(min-width: 768px)" srcset="images/Pro500-2-tablet@1x.png 1x, images/Pro500-2-tablet@2x.png 2x">
-              <img class="card__image" src="images/Pro500-2-mobile@1x.png" srcset="images/Pro500-2-mobile@2x.png 2x" alt="Cat Energy Pro" width="140" height="107">
+              <source width="169" height="210" type="image/png" media="(min-width: 1440px)" srcset="images/pro500-2-desktop@1x.png 1x, images/pro500-2-desktop@2x.png 2x">
+              <source width="200" height="210" type="image/png" media="(min-width: 768px)" srcset="images/pro500-2-tablet@1x.png 1x, images/pro500-2-tablet@2x.png 2x">
+              <img class="card__image" src="images/pro500-2-mobile@1x.png" srcset="images/pro500-2-mobile@2x.png 2x" alt="Cat Energy Pro" width="140" height="107">
             </picture>
           </a>
           <table class="card__table">
@@ -166,9 +168,9 @@
           </a>
           <a class="card__item-link link" href="#">
             <picture>
-              <source width="169" type="image/png" media="(min-width: 1440px)" srcset="images/Pro1000-2-desktop@1x.png 1x, images/Pro1000-2-desktop@2x.png 2x">
-              <source width="200" type="image/png" media="(min-width: 768px)" srcset="images/Pro1000-2-tablet@1x.png 1x, images/Pro1000-2-tablet@2x.png 2x">
-              <img class="card__image" src="images/Pro1000-2-mobile@1x.png" srcset="images/Pro1000-2-mobile@2x.png 2x" alt="Cat Energy Pro" width="140" height="107">
+              <source width="169" height="210" type="image/png" media="(min-width: 1440px)" srcset="images/pro1000-2-desktop@1x.png 1x, images/pro1000-2-desktop@2x.png 2x">
+              <source width="200" height="210" type="image/png" media="(min-width: 768px)" srcset="images/pro1000-2-tablet@1x.png 1x, images/pro1000-2-tablet@2x.png 2x">
+              <img class="card__image" src="images/pro1000-2-mobile@1x.png" srcset="images/pro1000-2-mobile@2x.png 2x" alt="Cat Energy Pro" width="140" height="107">
             </picture>
           </a>
           <table class="card__table">
@@ -201,9 +203,9 @@
           </a>
           <a class="card__item-link link" href="#">
             <picture>
-              <source width="169" type="image/png" media="(min-width: 1440px)" srcset="images/Slim500-desktop@1x.png 1x, images/Slim500-desktop@2x.png 2x">
-              <source width="200" type="image/png" media="(min-width: 768px)" srcset="images/Slim500-tablet@1x.png 1x, images/Slim500-tablet@2x.png 2x">
-              <img class="card__image" src="images/Slim500-mobile@1x.png" srcset="images/Slim500-mobile@2x.png 2x" alt="Cat Energy Slim" width="140" height="107">
+              <source width="169" height="210" type="image/png" media="(min-width: 1440px)" srcset="images/slim500-desktop@1x.png 1x, images/slim500-desktop@2x.png 2x">
+              <source width="200" height="210" type="image/png" media="(min-width: 768px)" srcset="images/slim500-tablet@1x.png 1x, images/slim500-tablet@2x.png 2x">
+              <img class="card__image" src="images/slim500-mobile@1x.png" srcset="images/slim500-mobile@2x.png 2x" alt="Cat Energy Slim" width="140" height="107">
             </picture>
           </a>
           <table class="card__table">
@@ -236,9 +238,9 @@
           </a>
           <a class="card__item-link link" href="#">
             <picture>
-              <source width="169" type="image/png" media="(min-width: 1440px)" srcset="images/Slim1000-desktop@1x.png 1x, images/Slim1000-desktop@2x.png 2x">
-              <source width="200" type="image/png" media="(min-width: 768px)" srcset="images/Slim1000-tablet@1x.png 1x, images/Slim1000-tablet@2x.png 2x">
-              <img class="card__image" src="images/Slim1000-mobile@1x.png" srcset="images/Slim1000-mobile@2x.png 2x" alt="Cat Energy Slim" width="140" height="107">
+              <source width="169" height="210" type="image/png" media="(min-width: 1440px)" srcset="images/slim1000-desktop@1x.png 1x, images/slim1000-desktop@2x.png 2x">
+              <source width="200" height="210" type="image/png" media="(min-width: 768px)" srcset="images/slim1000-tablet@1x.png 1x, images/slim1000-tablet@2x.png 2x">
+              <img class="card__image" src="images/slim1000-mobile@1x.png" srcset="images/slim1000-mobile@2x.png 2x" alt="Cat Energy Slim" width="140" height="107">
             </picture>
           </a>
           <table class="card__table">
@@ -271,9 +273,9 @@
           </a>
           <a class="card__item-link link" href="#">
             <picture>
-              <source width="169" type="image/png" media="(min-width: 1440px)" srcset="images/Slim500-2-desktop@1x.png 1x, images/Slim500-2-desktop@2x.png 2x">
-              <source width="200" type="image/png" media="(min-width: 768px)" srcset="images/Slim500-2-tablet@1x.png 1x, images/Slim500-2-tablet@2x.png 2x">
-              <img class="card__image" src="images/Slim500-2-mobile@1x.png" srcset="images/Slim500-2-mobile@2x.png 2x" alt="Cat Energy Slim" width="140" height="107">
+              <source width="169" height="210" type="image/png" media="(min-width: 1440px)" srcset="images/slim500-2-desktop@1x.png 1x, images/slim500-2-desktop@2x.png 2x">
+              <source width="200" height="210" type="image/png" media="(min-width: 768px)" srcset="images/slim500-2-tablet@1x.png 1x, images/slim500-2-tablet@2x.png 2x">
+              <img class="card__image" src="images/slim500-2-mobile@1x.png" srcset="images/slim500-2-mobile@2x.png 2x" alt="Cat Energy Slim" width="140" height="107">
             </picture>
           </a>
           <table class="card__table">
@@ -380,17 +382,18 @@
           Конюшенная, д. 19/8</span>
         <span>Санкт-Петербург</span>
       </div>
-
+      <picture>
+        <source width="1440" height="400" type="image/png" media="(min-width: 1440px)" srcset="images/location-desktop@1x.png 1x, images/location-desktop@2x.png 2x">
+        <source width="768" height="400" type="image/png" media="(min-width: 768px)" srcset="images/location-tablet@1x.png 1x, images/location-tablet@2x.png 2x">
+        <img class="contacts__map" src="images/location-mobile@1x.png" srcset="images/location-mobile@2x.png 2x" alt="Мы на карте" width="320" height="362">
+      </picture>
     </section>
     <section class="social">
       <h2 class="visually-hidden">
         Мы в сети
       </h2>
       <a class="main-footer__logo" href="#">
-        <picture>
-          <img class="main-footer__logo-image" src="images/footer-logo@1x.png" srcset="images/footer-logo@2x.png 2x" alt="Логотип Заголовок" width="128" height="24">
-        </picture>
-
+        <img class="main-footer__logo-image" src="images/footer-logo.svg" alt="Логотип Заголовок" width="128" height="24">
       </a>
       <ul class="main-footer__list">
         <li class="main-footer__item">
