Добавление файлов .scss

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -313,7 +313,7 @@
 
     </section>
     <section class="sub-products">
-      <h2 class="sub-products__header catalog-subheader">Дополнительные товары</h2>
+      <h2 class="sub-products__header">Дополнительные товары</h2>
       <ul class="sub-products__list">
         <li class="sub-products__item">
           <h3 class="sub-products__item-title">Сахарозаменитель</h3>
@@ -363,7 +363,7 @@
       </div>
     </section>
     <section class="actions">
-      <h2 class="actions__header catalog-subheader">Акции и новинки</h2>
+      <h2 class="actions__header">Акции и новинки</h2>
       <p class="actions__description">Подпишитесь на наши новости и не пропустите ни одного предложения!</p>
       <div class="actions__subscribe">
         <label for="subscribe-email"></label>
