--- a/source/index.html
+++ b/source/index.html
@@ -115,7 +115,7 @@
     </section>
     <section class="example">
       <header class="example__header">
-        <h2 class="main-subheader">Живой пример</h2>
+        <h2 class="example__subheader">Живой пример</h2>
         <p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
       </header>
       <ul class="example__list">
