Добавила стили на тексты

--- a/source/index.html
+++ b/source/index.html
@@ -92,9 +92,7 @@
       </div>
     </section>
     <section class="functions">
-      <header class="functions__header">
-        <h2 class="main-subheader">Как это работает</h2>
-      </header>
+      <h2 class="functions__header">Как это работает</h2>
       <ul class="functions__list">
         <li class="functions__item">
           <div class="functions__item-image"></div>
