--- a/source/catalog.html
+++ b/source/catalog.html
@@ -369,7 +369,7 @@
         <label for="subscribe-email"></label>
         <input name="subscribe-email" id="subscribe-email" type="email" placeholder="кuklachev@gmail.com">
         <button class="button" type="button">
-          <span class="button__button-text">Подписаться</span>
+          <span class="button__button-text button__button-text--third">Подписаться</span>
         </button>
       </div>
     </section>
